Added covering element behind appearing QR Code.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<div class="qrcode qr-down">
 				<img src="images/qrcode.png" alt="Código QR, a tua chave da Cidade Aberta.">
 			</div>
+			<div class="cover-screen hidden"></div>
 		</article>
 	</section>
 
