Added bottom-menu5.html with a 5 button bottom menu.

--- a/bottom-menu-4.html
+++ b/bottom-menu-4.html
@@ -42,7 +42,7 @@
 				Lorem ipsum dolor sit amet consectetur adipisicing elit.
 			</p>
 			<div class="bottom-menu">
-				<button>
+				<button class="active">
 					<i class="fas fa-home"></i>
 				</button>
 				<button>
