Personalized pointer and X-Ray pointer tests for Micro Website.

--- a/home-content.html
+++ b/home-content.html
@@ -27,40 +27,57 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<img class="logo-simple" src="images/ccb-logo.jpg" alt="CCB logo">
 
-	<img class="logo" src="images/LogoCCBCidadeAberta300px.png" alt="CCB logo">
-
-	<section class="welcome-img">
-		<img src="images/ccb-out.jpg" alt="Fachada do CCB.">
-	</section>
-
-	<section class="welcome-info">
-		<article>
-			<h1>Bem vindo ao CCB</h1>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit.
+	<section class="main-events">
+		<img src="images/jogodedamas.jpg" alt="Fachada do CCB.">
+		<article class="main-info">
+			<h1>Jogo de Damas</h1>
+			<h2>Praça CCB</h2>
+			<p>
+				<span>Música</span>
+				<span>1 agosto 2020</span>
+				<span>21:00</span>
 			</p>
-			<div class="bottom-menu">
-				<button class="active">
-					<i class="fas fa-home"></i>
-				</button>
-				<button>
-					<i class="fas fa-search"></i>
-				</button>
-				<button>
-					<i class="far fa-calendar-alt"></i>
-				</button>
-				<button>
-					<i class="fas fa-user"></i>
-				</button>
-			</div>
-			<div class="qrcode qr-down">
-				<img src="images/qrcode.png" alt="Código QR, a tua chave da Cidade Aberta.">
-			</div>
-			<div class="cover-screen hidden"></div>
+			<a>Ver mais ></a>
 		</article>
 	</section>
+
+	<section class="content">
+        <div class="content-section">
+			<h1>Destaques do momento</h1>
+			<div class="event-card">
+				<p class="event-card-title">Jogo de damas</p>
+				<p>1 agosto</p>
+			</div>
+			<div class="event-card">
+				<p class="event-card-title">Jogo de damas</p>
+				<p>1 agosto</p>
+			</div>
+		</div>
+	</section>
+	
+	<section class="bottom">
+		<div class="bottom-menu5">
+			<button class="active">
+				<i class="fas fa-home"></i>
+			</button>
+			<button>
+				<i class="fas fa-search"></i>
+			</button>
+			<button>
+				<i class="fas fa-key"></i>
+			</button>
+			<button>
+				<i class="far fa-calendar-alt"></i>
+			</button>
+			<button>
+				<i class="fas fa-user"></i>
+			</button>
+		</div>
+	</section>
+
+	<div class="pointer"></div>
 
 </body>
 <footer>
