--- a/bottom-menu-5.html
+++ b/bottom-menu-5.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head> 
 	<meta charset="utf-8">
-	<title></title>
+	<title>CCB - Chave da Cidade Aberta</title>
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="format-detection" content="telephone=no" />
 	<!--Generic meta-->
@@ -46,6 +46,9 @@
 			</div>
 			<div class="cover-screen hidden"></div>
 		</article>
+    </section>
+    
+    <section class="bottom">
         <div class="bottom-menu5">
             <button class="active">
                 <i class="fas fa-home"></i>
@@ -63,11 +66,11 @@
                 <i class="fas fa-user"></i>
             </button>
         </div>
-	</section>
+    </section>
 
 </body>
 <footer>
-	<script src="js/getQRCode.js"></script>
+	<script src="js/main.js"></script>
 
 </footer>
 </html>
