Hidden key easter egg v1.0 implemented.

--- a/microsite.html
+++ b/microsite.html
@@ -102,14 +102,16 @@
 			<input type="text" name="email/contact" id="contact" placeholder="Email/Contacto telefónico...">
 			<button><i class="fas fa-check"></i></button>
 		</article>
+
+		<img 
+			src="images/easter-egg1.png"
+			alt="Easter egg"
+			class="easter-egg">
 		<img 
 			src="https://divisare-res.cloudinary.com/images/c_limit,f_auto,h_2000,q_auto,w_3000/v1538263469/u9sispcbfy0irjg1wmbe/gregotti-associati-giovanni-amato-centro-cultural-de-belem.jpg"
 			alt=""
 			class="negative">
-		<img 
-			src="https://media2.giphy.com/media/jUwpNzg9IcyrK/200.gif"
-			alt="homer hiding"
-			class="easter-egg">
+			
 	</section>
 
 	<div class="pointer"></div>
